# skypro_homework

./: .env.example  README.md  pyproject.toml
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  paths.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_find_operations.py  test_generators.py  test_get_operation_amount.py  test_get_operation_counts.py  test_get_operations_info.py  test_log.py  test_masks.py  test_processing.py  test_widget.py
tests/docs/: test_operations_invalid_encoding.json
